[package]
description = "A tunnel protocol(client) working with n3(quic/h3 reverse proxy) server."
documentation = "https://docs.rs/n3agent"
edition = "2024"
license = "MIT"
name = "n3agent"
repository = "https://github.com/quic-lab/n3/crates/agent"
version = "0.1.8"

[dependencies]
futures = { version = "^0.3", features = ["executor"] }
n3io = { path = "../n3io", version = "^0.1", default-features = false }
n3quic = { path = "../quic", version = "^0.1", default-features = false }
n3-spawner = { path = "../spawner", version = "^0.1", default-features = false, optional = true }
log = { version = "^0.4" }
clap = { version = "4.5.41", features = ["derive"] }
color-print = "0.3.7"
pretty_env_logger = "0.5.0"

[features]
default = ["global_reactor", "futures-executor"]
global_reactor = ["n3io/global_reactor", "n3quic/global_reactor"]
futures-executor = ["n3-spawner/futures-executor", "n3quic/futures-executor"]
