[package]
description = "n3 asynchronous io library."
documentation = "https://docs.rs/n3"
edition = "2024"
license = "MIT"
name = "n3io"
repository = "https://github.com/quic-lab/n3/crates/n3io"
version = "0.1.6"

[dependencies]
mio = { version = "^1", features = ["net", "os-poll"] }
log = { version = "^0.4" }
dashmap = { version = "^6.1" }
timing-wheel = { path = "../timing-wheel", version = "^0.1" }
futures = { version = "^0.3", features = ["executor", "thread-pool"] }
libc = "^0.2"

[dev-dependencies]
futures-test = "^0.3"
pretty_env_logger = "0.5.0"

[features]
default = ["global_reactor"]
global_reactor = ["background_poll"]
background_poll = []
