[package]
description = "Integrating quiche into the mio framework"
documentation = "https://docs.rs/mio-quiche"
edition = "2024"
license = "MIT"
name = "mio-quiche"
repository = "https://github.com/quic-lab/n3"
version = "0.1.0"

[dependencies]
quiche = { version = "^0.24" }
mio = { version = "^1", features = ["net", "os-poll"] }
thiserror = { version = "^2" }
boring = { version = "^4.17" }
log = { version = "^0.4" }
