[package]
description = "n3 asynchronous quic based on quiche libarary"
documentation = "https://docs.rs/n3quic"
edition = "2024"
license = "MIT"
name = "n3quic"
repository = "https://github.com/quic-lab/n3/crates/quic"
version = "0.1.1"

[dependencies]
quiche = { version = "^0.24" }
boring = { version = "^4.17" }
log = { version = "^0.4" }
n3io = { path = "../n3io", version = "^0.1", default-features = false }
n3-spawner = { path = "../spawner", version = "^0.1", default-features = false, optional = true }

futures = { version = "^0.3", features = ["executor", "thread-pool"] }
dashmap = { version = "^6.1" }
cooked-waker = { version = "5.0.0" }

[dev-dependencies]
futures-test = "^0.3"
pretty_env_logger = "0.5.0"
rand = "0.9.1"

[features]
default = ["global_reactor", "futures-executor"]
global_reactor = ["n3io/global_reactor"]
futures-executor = ["n3-spawner/futures-executor"]
