[package]
description = "A binary-heap based timing wheel implementation."
documentation = "https://docs.rs/timing-wheel"
edition = "2024"
license = "MIT"
name = "timing-wheel"
repository = "https://github.com/quic-lab/n3/crates/timing-wheel"
version = "0.1.5"

[dependencies]
log = { version = "^0.4" }
